trunk/Archive2/81/40e3636a113fe9/output
main.cpp:10:7: error: non-constant-expression cannot be narrowed from type 'int' to 'char' in initializer list [-Wc++11-narrowing]
    A{a, a};
      ^
main.cpp:10:7: note: insert an explicit cast to silence this issue
    A{a, a};
      ^
      static_cast<char>( )
main.cpp:10:10: error: non-constant-expression cannot be narrowed from type 'int' to 'char' in initializer list [-Wc++11-narrowing]
    A{a, a};
         ^
main.cpp:10:10: note: insert an explicit cast to silence this issue
    A{a, a};
         ^
         static_cast<char>( )
2 errors generated.
